conspiracy-spectrums/src/style.css
:root {
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;

  --fg: #202020;
  --fg-strong: #000000;
  --bg: #f5f5f5;
  --bg-strong: #ffffff;
  --highlight: #ffff00;
}

@media (prefers-color-scheme: dark) {
  :root {
    --fg: #d5d5d5;
    --fg-strong: #ffffff;
    --bg: #202020;
    --bg-strong: #000000;
    --highlight: #505000;
  }
}

@font-face {
  font-family: "TeX Gyre Schola";
  font-weight: normal;
  font-style: normal;
  src: url("/texgyreschola-regular.otf");
}
@font-face {
  font-family: "TeX Gyre Schola";
  font-weight: normal;
  font-style: italic;
  src: url("/texgyreschola-italic.otf");
}
@font-face {
  font-family: "TeX Gyre Schola";
  font-weight: bold;
  font-style: normal;
  src: url("/texgyreschola-bold.otf");
}

body {
  font-family: "TeX Gyre Schola";
  font-size: calc(.75vw + 1.0em);
  line-height: 1.5;
  font-weight: 400;
  color: var(--fg);
  background-color: var(--bg);
	margin: 2em 2em 5em 2em;
	display: flex;
	align-items: center;
	min-height: 100vh;
}

#app {
	max-width: min(75vw, 1024px);
	margin: 0 auto;
}

header {
  margin: 1em 0;
}

header p {
  margin: 0;
}

header .subtitle {
  font-style: italic;
  margin-top: 2em;
  margin-bottom: 2em;
}

p {
  margin: 1em 0;
}

h1, h2, h3 {
  color: var(--fg-strong);
  font-weight: 700;
}

h1 {
  text-transform: uppercase;
  line-height: 110%;
  font-size: 2.8em;
}

h2 {
  margin-top: 2.5em;
  margin-bottom: 0.5em;
  font-size: 1.4em;
}

h4 {
  margin-bottom: 0;
}

h4 + p {
  margin-top: 0;
}

table {
  border-collapse: collapse;
  font-size: 0.9em;
}

table td,
table th {
  color: var(--fg);
  text-wrap: balance;
  text-align: center;
  vertical-align: top;
  padding: 0.2em 0.4em;
}

table th {
  font-size: 1.4em;
}
table td {
}
table th + th,
table td + td,
table th + td {
  border-left: solid 1pt var(--fg);
}

ul, ol, li {
  margin: 1em 1em;
}

p.highlight {
  background-color: var(--highlight);
  padding: 0 0.5em;
  margin: 0 -0.5em;
}

span.percent {
  padding-left: 0.1em;
  font-weight: normal;
}

b {
  color: var(--fg-strong);
}

a {
  color: var(--fg);
  cursor: pointer;
  text-decoration: none;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.rounded-box {
  border: dotted 2pt black;
  border-radius: 1em;
  padding: 1.5em;
  margin: 1em 0;
  text-align: center;
}

.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.waviy {
  position: relative;
}
.waviy span {
  position: relative;
  display: inline-block;
  animation: flip 1s linear;
  animation-delay: calc(.2s * var(--i))
}
@keyframes flip {
  0%,80% {
    transform: rotateY(360deg) 
  }
}

a.button {
  background: none;
}

a.visited {
  color: var(--fg);
}

small {
  font-size: 0.85em;
}

hr.dashed {
  border-left: none;
  border-top: dashed 2pt #808080;
  border-right: none;
  border-bottom: none;

}

.no-break {
  white-space: nowrap;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.text-divider {
  font-size: 0.85em;
  padding: 1.2em;
  font-style: italic;
  text-wrap: balance;
}

main {
  text-align: left;
}

.button-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 1em 0;
}


.notice {
  font-size: 1em;
  font-weight: bold;
  font-family: sans-serif;
  text-decoration: none;
  text-align: center;
  text-wrap: balance;
  margin: 1em 2em 1em 0;
  padding: 1em;
  border: solid 1pt var(--fg);
}

.button-list a {
  background-color: var(--fg);
  background-image: none;
  color: var(--bg);
  font-size: 1em;
  font-weight: bold;
  font-family: sans-serif;
  text-decoration: none;
  text-align: center;
  margin: 1em 2em 1em 0;
  padding: 1em;
  border-radius: 1em;
  border: solid 1pt var(--fg);
}

.button-list a:hover {
  background-color: var(--fg-strong);
  color: var(--bg-strong);
}

.button-list a:active {
  background-color: var(--bg);
  color: var(--fg);
}

.text-large {
  font-size: 1.4em;
}

.space {
  margin: 1em 0;
}

.space-2em {
  margin: 2em 0;
}

.space-3em {
  margin: 3em 0;
}

.space-above {
  margin-top: 1em;
}

.space-above-2em {
  margin-top: 2em;
}

.space-above-3em {
  margin-top: 3em;
}

.ratings-table {
	max-width: min(95vw, 1024px);
  margin: 2em 0;
}

.rating-header {
  display: flex;
  align-items: center;
  padding: 0.25em 0.5em;
}

.space-around {
  justify-content: space-around;
}

.space-between {
  justify-content: space-between;
}

.rating-row {
  display: flex;
  flex-direction: row;
  gap: 1em;
  margin: 1em 0;
}

.rating-row.rating-header {
  flex-direction: column-reverse;
  margin: 3em 0 0 0;
}

.rating-legend {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0 0.3em 0 0.5em;
}

.rating-row .rating-slider {
  flex: 0 0 40%;
  padding: 0 1em;
}

.rating-row .rating-slider input {
  width: 100%;
}

.rating-row .rating-statement {
  flex: 1 2 2em;
}

input[type=text] {
  color: lightblue;
  padding: .4em;
  border: .1em solid lightblue;
}

input[type=range] {
  -webkit-appearance: none;
  background-color: transparent;
  margin: 15px 0;
  width: 100%;
  cursor: pointer;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 1pt;
  border: solid 1pt var(--fg);
  border-radius: 2em;
}
input[type=range]::-webkit-slider-thumb {
  border: solid 1pt var(--fg);
  height: 3.5em;
  width: 3.5em;
  border-radius: 2em;
  background-color: #f5f5f5;
  border: solid 2pt #303030;
  -webkit-appearance: none;
  margin-top: -1.75em;
}
input[type=range]::-webkit-slider-thumb {
  background-image: none; 
  background-repeat: no-repeat;
  background-size: 1.3em;
  background-position: center;
  background-color: #f5f5f5;
  border: solid 2pt #303030;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background-color: var(--bg);
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 1em;
  border-radius: 1em;
}
/* ... */

